<resources>
    <string name="app_name">Calculator</string>

    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiply">x</string>
    <string name="divide">÷</string>
    <string name="modulo">%</string>
    <string name="reset">C</string>
    <string name="bracket">( )</string>
    <string name="equal">=</string>
    <string name="dot">.</string>
    <string name="set_minus">+/-</string>
    <string name="incomplete">완성되지 않은 수식입니다.</string>
    <string name="plz_two">두 개의 숫자 연산만 가능합니다.</string>
    <string name="open_bracket">(</string>
    <string name="close_bracket">)</string>
</resources>